fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
+
+
+    overflow-x: hidden;
 }
 
 .page1 {
